# nicer

./: Cargo.toml
src/: main.rs
