[package]
name = "nicer"
description = "Automagically call your tools with background priority"
version = "0.2.0"
authors = ["amyspark <amy@amyspark.me>"]
edition = "2018"
license = "MPL-2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
nix = "0.18"

[target.'cfg(all(unix, target_os = "macos"))'.dependencies]
core-foundation = "0.9.1"

[dependencies]
anyhow = "1.0"
ctrlc = "3.1"
structopt = "0.3"
