[package]
name = "nicer"
description = "Automagically call your tools with background priority"
version = "0.3.0"
authors = ["amyspark <amy@amyspark.me>"]
edition = "2018"
license = "MPL-2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Power", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
nix = "0.18"

[target.'cfg(all(unix, target_os = "macos"))'.dependencies]
core-foundation = { version = "0.10.0", features = ["mac_os_10_8_features"] }

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
ctrlc = "3.4.6"

[profile.release]
opt-level = 'z'
lto = true
